src/main/java/com/example/codingtest/core/error/ex/Exception401.java
package com.example.codingtest.core.error.ex;

// 인증관련
public class Exception401 extends RuntimeException {
    public Exception401(String message) {
        super(message);
    }
}
